--- a/client/partials/view1.html
+++ b/client/partials/view1.html
@@ -32,6 +32,7 @@
 
 		<div class="signin">
 			<h1>Sign In</h1>
+			<h4 ng-show="error" class="error">{{ error }}</h4>
 			<form name="loginForm" ng-submit="loginUser(loginForm.$valid)" novalidate> <!-- novalidate prevents HTML5 validating because we are using angular validation -->
 				
 				<div class="form-group" ng-class="{ 'has-error' : loginForm.username.$invalid && !loginForm.username.$pristine }">
