--- a/client/partials/view4.html
+++ b/client/partials/view4.html
@@ -2,28 +2,29 @@
 	<div class='top'>
 		<h2>{{topic.username}} posted a topic:</h2>
 		<h4>{{topic.name}}</h4>
-		<a href='/' ng-click='logout()'>LOGOUT</a><br><br>
+		<h5>{{topic.description}}</h5>
+		<input type = "submit" value="logout" ng-click='logout()'><br><br>
 		<a href='#/dashboard'>DASHBOARD</a>
 	</div>
-	{{wall}}
+
 	<div class='bottom'>
 		<h2>Post your answer here...</h2>
 		<textarea ng-model='newPost.text'></textarea>
-		<input type='submit' value='Post' ng-click='addPost(wall, {text: newPost.text})'>
+		<input type='submit' value='Post' ng-click='addPost({text: newPost.text})'>
 		<div class='post'>
 			<table>
 				<tr ng-repeat='post in posts'>
 
-					<td><a href='#/profile/{{post.username}}'>{{post.username}}</a>: {{post.text}}  <input type='submit' value='+' ng-model = 'upvoted' ng-click='upvote(post._id, post.upvote)'>{{post.upvote}}  <input type='submit' value='-' ng-click='downvote(post._id, post.downvote)'>{{post.downvote}}
+					<td><a href='#/profile/{{post.username}}'>{{post.username}}</a>: {{post.text}}  <input type='submit' value='+' ng-model = 'upvoted' ng-click='upVote(post.id)'>{{post.upvote}}  <input type='submit' value='-' ng-click='downVote(post.id)'>{{post.downvote}}
 						
 
 						<ul ng-repeat='comment in comments'>
-							<li ng-repeat='key in comment'><a href='#/profile/{{key.username}}'>{{key.username}}</a>: {{key.text}}</li>
+							<li ng-if="comment.post_id == post.id"><a href='#/profile/{{key.username}}'>{{comment.username}}</a>: {{comment.text}}</li>
 						</ul>
 						<div class='comment'>
 
 							<textarea ng-model='newComment.text'></textarea>
-							<input type='submit' value='Comment' ng-click='addComment(post._id, {text: newComment.text})'>
+							<input type='submit' value='Comment' ng-click='addComment(post.id, {text: newComment.text})'>
 
 
 						</div>
