--- a/client/partials/view3.html
+++ b/client/partials/view3.html
@@ -1,10 +1,11 @@
-<div ng-controller='loggedInController'>
-	<input type="submit" value="logout" ng-click="logout()"><br><br>
-	<a href='#/dashboard'>DASHBOARD</a>
-	<h1>Username: {{user.username}}</h1>
-	
-	<h3>Posted..</h3>
-	<p>{{user.topic_counter}} Topic</p>
-	<p>{{user.post_counter}} Posts</p>
-	<p>{{user.comment_counter}} Comment</p>
+<div ng-controller='profileController'>
+	<input class="btn btn-danger" type="submit" value="Logout" ng-click="logout()"><br><br>
+	<a href="#/dashboard"><button class="btn btn-primary">Dashboard</button></a>
+	<h1 class="main">Username: {{user.username}}</h1>
+	<div id="counters">
+		<h3>Posted..</h3>
+		<p>{{user.topic_counter}} Topics</p>
+		<p>{{user.post_counter}} Posts</p>
+		<p>{{user.comment_counter}} Comments</p>
+	</div>
 </div>
